# Anura

./: .clang-format  Array.h  CMakeLists.txt  Commons.h  IsildursBane.c  IsildursBane.h  LineNumberInfo.txt  Palantir.c  Palantir.h  QueueB.c  QueueB.h  README.md  Saruman.c  Saruman.h  Sauron.c  Sauron.h  Target.c  Target.h  Test.c  Tolkien.c  Tolkien.h  bp.txt  main.c  main.h  x64-format.txt  x64.txt
MtDoom/: MtDoom.c  MtDoom.h
MtDoom/lexer/: Lexer.c  Lexer.h
MtDoom/parser/: Parser.c  Parser.h
TargetArch/: x64.c  x64.h
TargetOS/: Linux.c  Linux.h
shared/: Array.c  Array.h  Buffer.c  Buffer.h  Colours.h  Errors.h  Helper_File.c  Helper_File.h  Helper_Math.c  Helper_Math.h  Helper_String.c  Helper_String.h  Vector.c  Vector.h
